2012-01-08  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3445507:
    * source/org/jfree/data/time/TimeSeriesCollection.java
    (getRangeBounds(boolean)): New method,
    (getRangeBounds(List, Range, boolean)): Fix combining of ranges.

2012-01-08  David Gilbert <david.gilbert@object-refinery.com>

    * source/org/jfree/data/Range.java
    (combineIgnoringNaN): New method.

2012-01-08  David Gilbert <david.gilbert@object-refinery.com>

    Patch 3463807 by Sebastiao Correia
    * swt/org/jfree/experimental/chart/swt/ChartComposite.java
    (dispose): Dispose the popup if not null.

2011-12-21  Martin Hoeller <martin.hoeller@xss.co.at>

    Patch 3447161 by Ulrich Voigt/Martin Hoeller:
    * org/jfree/chart/plot/CombinedDomainXYPlot.java:
    (panRangeAxes): new method;
    * org/jfree/chart/plot/CombinedRangeXYPlot.java
    (panDomainAxes): new method;

2011-12-16  Martin Hoeller <martin.hoeller@xss.co.at>

    Add support to hide minor gridlines for PolarPlot:
    * org/jfree/chart/plot/PolarPlot.java
    (radiusMinorGridlinesVisible): New field,
    (isRadiusMinorGridlinesVisible): New method,
    (setRadiusMinorGridlinesVisible): Likewise,
    (buildRadialTicks): Likewise,
    (drawGridlines): Updated to support new flag;

2011-11-12  Martin Hoeller <martin.hoeller@xss.co.at>

    Improvements to axis and plot editors:
    * org/jfree/chart/editor/DefaultValueAxisEditor.java: New file;
    * org/jfree/chart/editor/DefaultLogAxisEditor.java: New file;
    * org/jfree/chart/editor/DefaultPolarPlotEditor.java: New file;
    * org/jfree/chart/editor/DefaultChartEditor.java:
    (constructor): added support for DefaultPolarPlotEditor;
    * org/jfree/chart/editor/DefaultAxisEditor.java
    (constructor): added support for DefaultLogAxisEditor;
    * org/jfree/chart/editor/DefaultNumberAxisEditor.java: refactoring;
    * org/jfree/chart/editor/DefaultPlotEditor.java
    (createPlotPanel): new method,
    (createPlotTabs): new method;