@@ -1,5 +1,10 @@
 2012-01-08  David Gilbert <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/plot/dial/StandardDialScale.java
+    (angleToValue): Implemented and removed FIXME.
+
+2012-01-08  David Gilbert <david.gilbert@object-refinery.com>
+
     Bug 3445507:
     * source/org/jfree/data/time/TimeSeriesCollection.java
     (getRangeBounds(boolean)): New method,
